# polisim

./: Cargo.toml  Design.md  README.md  example-declaration.toml  example.dot
libpolisim/: Cargo.toml
libpolisim/src/: lib.rs  loader.rs  sim.rs
src/: main.rs
