[package]
name = "polisim-cli"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = ["libpolisim"]
resolver = "2"

[dependencies]
libpolisim = { path = "libpolisim" }
nalgebra = "0.33.2"
clap = { version = "4.5.40", features = ["derive"] }
anyhow = "1.0.98"
